--- a/package.json
+++ b/package.json
@@ -9,9 +9,12 @@
   "dependencies": {
     "weighted": "~0.2.2"
   },
-  "devDependencies": {},
+  "devDependencies": {
+    "faucet": "0.0.1",
+    "tape": "~4.5.1"
+  },
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test/usergen | faucet"
   },
   "repository": {
     "type": "git",
